Fix hero-info alignment-padding needed to be on bottom not all around

--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ button {
 .hero-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-content: center;
     gap: 8px;
     width: 50vw;
     height:30vh;
-    padding: 32px;
+    padding-bottom: 32px;
 }
 
 .info-item1 {
